<resources>
    <string name="app_name">LabActivityDataTransfer</string>
    <string name="reg">请输入您的注册信息</string>
    <string name="name">用户名 ：</string>
    <string name="want_reg">请填写想注册的帐号</string>
    <string name="key">密码 ：</string>
    <string name="sex">性别 ：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="btn_reg">注册</string>
    <string name="back">返回</string>


</resources>