<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#0077ff"
        android:textSize="20sp" />
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp" />
        <!-- 定义一个 EditText，用于收集用户的帐号 -->
        <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/want_reg"
        android:selectAllOnFocus="true" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:gravity="right"
            android:textSize="18sp" />
        <!-- 用于收集用户的密码 -->
        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:gravity="right"
            android:textSize="18sp" />
        <!-- 定义一组单选框，用于收集用户注册的性别 -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="18sp" />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="18sp" />
        </RadioGroup>
    </TableRow>
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reg"
        android:textSize="18sp" />
</TableLayout>